k8s/juicefs/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: juicefs-webui
  namespace: juicefs
  annotations:
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
      sectionName: websecure
      kind: Gateway
  hostnames:
    - juice.infra.h3rmt.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: juicefs-csi-dashboard
          port: 8088
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: middleware-auth-juice-webui
